# packages/be/src/openapi/openapi.json
@@ -317,6 +317,104 @@
                     }
                 }
             }
+        },
+        "/api/v1/orders/": {
+            "get": {
+                "tags": ["Order"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "post": {
+                "tags": ["Order"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/{id}": {
+            "get": {
+                "tags": ["Order"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "put": {
+                "tags": ["Order"],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "_def": {
+                                "unknownKeys": "strict",
+                                "catchall": {
+                                    "_def": {
+                                        "typeName": "ZodNever"
+                                    }
+                                },
+                                "typeName": "ZodObject"
+                            },
+                            "_cached": null
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "delete": {
+                "tags": ["Order"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            },
+            "patch": {
+                "tags": ["Order"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/{id}/status": {
+            "patch": {
+                "tags": ["Order"],
+                "responses": {
+                    "200": {
+                        "description": "Default Response"
+                    }
+                }
+            }
         }
     },
     "host": "localhost:1337",
